--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-i18n": "^10.0.4",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.27.0",
+    "prettier": "^3.3.3",
     "sass": "1.77.6",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
